--- a/R/09_CMScaller.qmd
+++ b/R/09_CMScaller.qmd
@@ -61,7 +61,8 @@ CMS_pred_table <- CMS_pred |>
 table(CMS_pred_table$pred_correct)
 
 confusionMatrix(data = factor(CMS_pred_table$prediction), 
-                reference = factor(CMS_pred_table$CMS_label))
+                reference = factor(CMS_pred_table$CMS_label), 
+                mode = "prec_recall")
 ```
 
 ### NanoString data
@@ -83,5 +84,6 @@ CMS_pred_table <- CMS_pred |>
 table(CMS_pred_table$pred_correct)
 
 confusionMatrix(data = factor(CMS_pred_table$prediction), 
-                reference = factor(CMS_pred_table$CMS_label))
+                reference = factor(CMS_pred_table$CMS_label), 
+                mode = "prec_recall")
 ```
