--- a/R/02_clean_data.qmd
+++ b/R/02_clean_data.qmd
@@ -56,6 +56,47 @@ cms_labels <- cms_labels |>
            cms = CMS_final_network_plus_RFclassifier_in_nonconsensus_samples))
 ```
 
+## Quality control
+
+Remove low quality samples based on low read count.
+
+```{r}
+#| label: QC_read_count
+
+TCGA_exprs_long <- TCGA_exprs |> 
+  pivot_longer(cols = -feature,
+               names_to = "sample",
+               values_to = "log_counts") |> 
+  group_by(sample) |> 
+  summarise(reads = sum(log_counts)) |> 
+  ungroup()
+
+read_limit <- TCGA_exprs_long |> 
+  summarise(mean_reads = mean(reads), sd_reads = sd(reads)) |> 
+  mutate(cutoff = mean_reads - 3*sd_reads) |> 
+  pull(cutoff)
+
+TCGA_exprs_long |>   
+  ggplot(mapping = aes(x = sample, 
+                       y = reads,
+                       fill = reads < read_limit)) +
+  geom_col() + 
+  geom_hline(yintercept = read_limit) +
+  scale_fill_manual(values = setNames(c('darkred', 'gray'), c(T, F)))+
+  theme_minimal() +
+  theme(legend.position = "None")  
+
+samples_QC <- TCGA_exprs_long |> 
+  filter(reads > read_limit) |> 
+  pull(sample)
+
+TCGA_exprs <- TCGA_exprs |> 
+  select(c(feature, samples_QC))
+
+cms_labels <- cms_labels |> 
+  filter(sample %in% samples_QC)
+```
+
 ## Match expression data and CMS labels
 
 Ensure that the expression data and CMS labels contain the same samples in the same order.
